# __Template

./: .clang-format  .clang-tidy  .cmake-format.yaml  .gitignore  .gitmodules  .pre-commit-config.yaml  .yamlfmt  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  Calc_8h.html  Calc_8h.js  Calc_8h__dep__incl.map  Calc_8h__dep__incl.md5  Calc_8h_a5121b144c827e4785966d7cec78b51cf_icgraph.md5  Calc_8h_source.html  ClangTidyWarningsTest_8cpp.html  ClangTidyWarningsTest_8cpp.js  ClangTidyWarningsTest_8cpp__incl.map  ClangTidyWarningsTest_8cpp__incl.md5  ClangTidyWarningsTest_8cpp_ad0138c260736c93e0494cfc121cc458b_cgraph.map  ClangTidyWarningsTest_8cpp_ad0138c260736c93e0494cfc121cc458b_cgraph.md5  ClangTidyWarnings_8cpp.html  ClangTidyWarnings_8cpp__incl.map  ClangTidyWarnings_8cpp__incl.md5  ClangTidyWarnings_8h.html  ClangTidyWarnings_8h__dep__incl.map  ClangTidyWarnings_8h__dep__incl.md5  ClangTidyWarnings_8h_source.html  CppStandard17_8cpp.html  CppStandard17_8cpp.js  CppStandard17_8cpp__incl.map  CppStandard17_8cpp__incl.md5  CppStandard20_8cpp.html  CppStandard20_8cpp.js  CppStandard20_8cpp__incl.map  CppStandard20_8cpp__incl.md5  GeneratorTest_8cpp.html  GeneratorTest_8cpp.js  GeneratorTest_8cpp__incl.map  (+353 more)
.github/: FUNDING.yml
.github/template/: README.md
.github/workflows/: auto-clang-format.yml  codeql.yml  continuous-integration.yml  documentation.yml  macos.yml  template-janitor.yml  ubuntu.yml  windows.yml
Tools/: Symlink.bat  pre-commit
Tools/__Setup/: ChocoPackages.bat  ChocoPackages.config  Symlink.bat
cmake/: CCache.cmake  Cache.cmake  CodeAnalysis.cmake  CodeCoverage (lcov + genhtml).cmake  CodeCoverage.cmake  Doxygen.cmake  InterproceduralOptimization.cmake  Options.cmake  SafeGuards.cmake  Sanitize.cmake  StaticAnalyzers.cmake  UpdateSubmodules.cmake  Utilities.cmake  Warnings.cmake
configure/: CMakeLists.txt  config.h.in
docs/: Doxyfile
include/: ClangTidyWarnings.h  MyClass.h
include/Generator/: Generator.h
include/Utility/: Utility.h  calc.h
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  functions_0.js  functions_1.js  functions_10.js  functions_11.js  functions_12.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  (+18 more)
src/: ClangTidyWarnings.cpp  Main.cpp  MyClass.cpp  main.cpp
src/Generator/: Generator.cpp  generator.cpp
src/Utility/: Calc.cpp  Utility.cpp  calc.cpp
test/: CMakeLists.txt  Calc.cpp  ClangTidyWarningsTest.cpp  CppStandard17.cpp  CppStandard20.cpp  Generator.cpp  GeneratorTest.cpp  MyClassMockTest.cpp  MyClassTest.cpp  Utility.cpp  calc.cpp  generator.cpp
tools/: Symlink.bat  clang-tidy-cache-wrapper.bat  clang-tidy-wrapper.bat  pre-commit
tools/__Setup/: Install.bat  packages.config
